--- a/Aula-flexbox/styles/style.css
+++ b/Aula-flexbox/styles/style.css
@@ -77,6 +77,7 @@ div img {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .espacado9 div {
@@ -85,8 +86,23 @@ div img {
 
 .espacado10 {
     height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.espacado10 div {
+.emcima10 {
+    background-color: rgb(204, 144, 221);
+    display: flex;
+    justify-content: space-between;
+}
+
+.embaixo10 {
+    background-color: rgb(204, 144, 221);
+    display: flex;
+    justify-content: space-between;
+}
+
+.embaixo10 div, .emcima-direita10 {
     background-color: #FFE606;
 }
